# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_zh.md  TESTING_INFRASTRUCTURE.md  TESTING_INFRASTRUCTURE_zh.md  docker-compose.yml  pyproject.toml  快速上手指南.md
.github/workflows/: ci.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 1741e90bf0de_update_item.py  6bd4be4aafa5_init.py  a6bf6d872ff6_init.py
app/: main.py
app/api/: dependencies.py  router_factory.py
app/api/routers/: health.py  items.py  readonly_item.py  users.py
app/core/: config.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py
app/data/: base_crud.py  crud.py  database.py  models.py  schema_factory.py  schemas.py  unit_of_work.py
app/data/repositories/: __init__.py  base.py
app/infrastructure/: __init__.py  redis_client.py  s3_client.py
app/repositories/: __init__.py  base.py  item.py  user.py
app/services/: __init__.py  base.py  item_service.py  user_service.py
docs/: DOCKER_AND_CI.md  DOCKER_AND_CI_zh.md  S3_ALTERNATIVES.md  S3_ALTERNATIVES_zh.md
scripts/: configure_s3_bucket.py
