[project]
name = "layer-craft-backend"
version = "1.0.0"
description = "layer craft server"
authors = [{ name = "wangwenlong@c12.ai" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    # Redis integration
    "redis[hiredis] (>=5.0.0,<6.0.0)",
    # S3 integration
    "boto3 (>=1.34.0,<2.0.0)",
    "botocore (>=1.34.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
black = "^25.1.0"
ruff = "^0.12.7"
pre-commit = "^4.0.1"
mypy = "^1.14.1"
pyright = "^1.1.404"
# Type stubs
types-redis = "^4.6.0"
boto3-stubs = { version = "^1.34.0", extras = ["s3"] }

[tool.black]
line-length = 120                   # 統一設置為 120
skip-string-normalization = false   # 強制使用雙引號，保持代碼風格一致

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"              # Match Black's default (enforce double quotes)
indent-style = "space"              # Use spaces for indentation
skip-magic-trailing-comma = false  # Respect magic trailing comma like Black

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
    "S",   # bandit
]
ignore = ["COM812"]  # Conflicts with formatter

[tool.ruff.lint.per-file-ignores]
# Allow assert statements in test files
"tests/**/*.py" = ["S101"]
"test_*.py" = ["S101"]
"**/test_*.py" = ["S101"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
